# misora2_metal_loss

./: CMakeLists.txt  README.md  package.xml
include/misora2_metal_loss/: detect.hpp  metal_loss_component.hpp
src/: detect.cpp  detect_main.cpp  metal_loss_component.cpp  metal_loss_node.cpp
